Adding favicon to the site. And some refactoring.

--- a/style.css
+++ b/style.css
@@ -7,15 +7,17 @@
 }
 
 body {
-  background-color: #111118;
-  color: #ededed;
+  background-color: #ffffff;
+  color: #000000;
   height: 100vh;
   display: grid;
   grid-template: 80px 1fr / 1fr;
 }
 
 header {
-  box-shadow: 0 0 1px 4px #cccccc;
+  background-color: #282a36;
+  color: #ffffff;
+  box-shadow: 0 0 1px 4px #282a36;
 }
 
 .modal {
@@ -25,13 +27,25 @@ header {
   height: 350px;
   width: 300px;
   border-radius: 1rem;
+  background-color: #ededed;
+}
+
+.modal::backdrop {
+  background-color: #555555;
+  opacity: .3;
 }
 
 .new-book-form {
   display: grid;
   place-items: center;
-  gap: 1.5rem;
+  gap: 1rem;
   padding: 1rem;
+}
+
+.new-book-form > p {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
 }
 
 .new-book-form > input {
@@ -39,6 +53,16 @@ header {
   border-radius: .5rem;
   height: 2rem;
   padding-left: .5rem;
+  background-color: #ffffff;
+}
+
+.new-book-form > label {
+  margin-top: 1rem;
+}
+
+label > input {
+  margin-left: 0.8rem;
+  accent-color: #1e40af;
 }
 
 input:focus {
@@ -53,6 +77,12 @@ input:focus {
   border-radius: .5rem;
 }
 
+.add-button {
+  background: linear-gradient(45deg, #1e40af, #a855f7);
+  color: #ffffff;
+  font-weight: bold;
+}
+
 nav {
   padding: 0 4rem;
   height: 100%;
@@ -64,8 +94,8 @@ nav {
 .new-book {
   border: none;
   border-radius: .5rem;
-  background-color: #4338ca;
-  color: inherit;
+  background: linear-gradient(45deg, #1e40af, #a855f7);
+  color: #ffffff;
   font-size: 1.1rem;
   border: none;
   padding: .7rem;
@@ -83,14 +113,29 @@ main {
   gap: 2rem;
 }
 
+.empty-library {
+  position: relative;
+  left: 400px;
+  margin: 100px auto;
+  font-size: 2rem;
+  width: 500px;
+}
+
 .card {
   display: grid;
   grid-template: repeat(5, 1fr) / 1fr;
   place-items: center;
-  height: 250px;
+  height: 280px;
   font-size: 1.2rem;
   padding: 1rem;
   border-radius: 1rem;
-  background-color: #111118;
+  background-color: #ffffff;
+  color: #000000;
   box-shadow: 0 0 1px 2px #cccccc;
+}
+
+.card-status, .card-remove {
+  width: 80%;
+  height: 2rem;
+  font-size: 1.1rem;
 }
