--- a/style.css
+++ b/style.css
@@ -78,9 +78,10 @@ input:focus {
 }
 
 .add-button {
-  background: linear-gradient(45deg, #1e40af, #a855f7);
+  background-color: #6d28d9;
   color: #ffffff;
   font-weight: bold;
+  cursor: pointer;
 }
 
 nav {
@@ -94,7 +95,7 @@ nav {
 .new-book {
   border: none;
   border-radius: .5rem;
-  background: linear-gradient(45deg, #1e40af, #a855f7);
+  background-color: #6d28d9;
   color: #ffffff;
   font-size: 1.1rem;
   border: none;
@@ -138,4 +139,20 @@ main {
   width: 80%;
   height: 2rem;
   font-size: 1.1rem;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
+.card-remove {
+    background-color: #ef4444;
+    color: #ffffff;
+}
+
+.card-remove:hover {
+    background-color: #dc2626;
+}
+
+.card-remove:active {
+    background-color: #b91c1c;
 }
